--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -17,7 +17,7 @@
             {% for item in cart_items %}
                 <div class="row">
                     <div class="col">
-                        <p>{{ item.item.name }} <strong>x{{ item.quantity }}</strong></p>
+                        <p>{{ item.bag_choice.name }} <strong>x{{ item.quantity }}</strong></p>
                     </div>
                 </div>
             {% endfor %}
