--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,20 +1,110 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 {% block content %}
 
-    <div class="container-fluid container-padding text-center mt-5 mt-lg-0">
+    <div class="container-fluid container-padding mt-5 mt-lg-0">
         <div class="row mb-5">
             <div class="col">  
-                <h1>Your Shopping Cart</h1>
+                <h1 class="text-center">Checkout</h1>
             </div>
         </div>
         <div class="row">
+            <div class="col-12 col-lg-6 order-lg-last mb-5">
+                <p class="font-weight-bold">Order Summary ({{ item_count }})</p>
+                <div class="row">
+                    <div class="col-7 offset-2">
+                        <p class="mb-1 mt-0 small text-muted">Item</p>
+                    </div>
+                    <div class="col-3">
+                        <p class="mb-1 mt-0 small text-muted">Subtotal</p>
+                    </div>
+                </div>
+                {% for item in cart_items %}
+                    <div class="row">
+                        <div class="col-2 mb-1">
+                            <img class="w-100 border-radius-curve" src="{% static 'images/yommiesbag.jpg' %}" alt="Bag of yommies pick 'n' mix">
+                        </div>
+                        <div class="col-7">
+                            <p class="mb-2"><strong>{{ item.bag_choice.name }}</strong></p>
+                            <p class="mb-3 small text-muted">Qty: {{ item.quantity }}</p>
+                        </div>
+                        <div class="col-3">
+                            <p class="my-3 small text-muted">£{{ item.bag_choice.price | calc_subtotal:item.quantity }}</p>
+                        </div>
+                    </div>
+                {% endfor %}
+                <div class="row text-purple mt-4">
+                    <div class="col-7 offset-2">
+                        <p class="my-2">Order Total:</p>
+                        <p class="my-2">Delivery:</p>
+                        <p class="my-2">Grand Total:</p>
+                    </div>
+                    <div class="col-3">
+                        <p class="my-2">£{{ total | floatformat:2 }}</p>
+                        <p class="my-2">£{{ delivery | floatformat:2 }}</p>
+                        <p class="my-2"><strong>£{{ grand_total | floatformat:2 }}</strong></p>
+                    </div>
+                </div>
+            </div>
             <div class="col-12 col-lg-6">
                 <p>To complete your order please fill out the form below</p>
+                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                    {% csrf_token %}
+                    <fieldset class="rounded px-2 mb-5">
+                        <legend class="fieldset-label small w-auto">Details</legend>
+                        {{ order_form.full_name | as_crispy_field }}
+                        {{ order_form.email | as_crispy_field }}
+                    </fieldset>
+                    <fieldset class="rounded px-2 mb-5">
+                        <legend class="fieldset-label small w-auto">Delivery</legend>
+                        {{ order_form.phone_number | as_crispy_field }}
+                        {{ order_form.country | as_crispy_field }}
+                        {{ order_form.postcode | as_crispy_field }}
+                        {{ order_form.town_or_city | as_crispy_field }}
+                        {{ order_form.street_address1 | as_crispy_field }}
+                        {{ order_form.street_address2 | as_crispy_field }}
+                        {{ order_form.county | as_crispy_field }}
+                        <div class="form-check form-check-inline mr-0">
+							{% if user.is_authenticated %}
+								<label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
+                                <input class="form-check-input ml-2 mr-0" type="checkbox" id="id-save-info" name="save-info" checked>
+							{% else %}
+								<label class="form-check-label" for="id-save-info">
+                                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or 
+                                    <a class="text-info" href="{% url 'account_login' %}">login</a> to save this information
+                                </label>
+							{% endif %}
+						</div>
+                    </fieldset>
+                    <fieldset class="px-3">
+                        <legend class="fieldset-label small w-auto">Payment</legend>
+                        <!-- A Stripe card element will go here -->
+                        <div class="mb-3" id="card-element"></div>
+
+                        <!-- Used to display form errors -->
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    </fieldset>
+
+                    <div class="mt-5 mb-2">                    
+						<a href="{% url 'view_cart' %}" class="btn purple-btn font-weight-bold mx-2">
+                            Adjust Bag
+						</a>
+						<button id="submit-button" class="btn pink-btn font-weight-bold mx-2">
+							Complete Order
+						</button>
+						<p class="small text-danger mt-3">
+							<span class="icon">
+								<i class="fas fa-exclamation-circle"></i>
+							</span>
+							<span>Your card will be charged <strong>${{ grand_total|floatformat:2 }}</strong></span>
+						</p>
+					</div>
+                </form>
             </div>
         </div>
     </div>
