--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -109,6 +109,11 @@
         </div>
     </div>
 
+    <div id="loading-overlay">
+        <h1 class="text-light loading-spinner">
+            <i class="fas fa-3x fa-compact-disc fa-spin"></i>
+        </h1>
+    </div>
 {% endblock %}
 
 {% block postloadjs %}
