customization to all auth templates

--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container-fluid container-padding mt-5 mt-lg-0">
         <div class="row mb-5">
-            <div class="col-6 mx-auto">  
+            <div class="col-sm-6 mx-auto">  
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
