--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -7,17 +7,18 @@
 {% block inner_content %}
     <h1 class="text-center pb-5">{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
-<p class="text-center">{% trans 'The following e-mail addresses are associated with your account:' %}</p>
+<p class="text-center pb-3">{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
-<form action="{% url 'account_email' %}" class="email_list" method="post">
+<form class="py-5" action="{% url 'account_email' %}" class="email_list" method="post">
 {% csrf_token %}
+{{ form|crispy }}
 <fieldset class="blockLabels">
 
   {% for emailaddress in user.emailaddress_set.all %}
 <div class="ctrlHolder">
       <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
 
-      <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
+      <input class="my-3" id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
 
 {{ emailaddress.email }}
     {% if emailaddress.verified %}
@@ -31,26 +32,32 @@
   {% endfor %}
 
 <div class="buttonHolder">
-      <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+    <div class="text-center">
+        <button class="secondaryAction btn pink-btn m-2" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+        <button class="secondaryAction btn purple-btn m-2" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+    </div>
+    <div class="text-center">
+        <button class="primaryAction btn btn-danger mt-2" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+    </div>
 </div>
 
 </fieldset>
 </form>
 
 {% else %}
-<p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
+<p class="py-2"><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
 
 {% endif %}
 
   {% if can_add_email %}
-    <h2>{% trans "Add E-mail Address" %}</h2>
+    <h2 class="text-center pb-3">{% trans "Add E-mail Address" %}</h2>
 
     <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        {{ form|crispy }}
+        <div class="text-center">
+            <button class="btn pink-btn" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        </div>
     </form>
   {% endif %}
 
