--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -18,6 +18,7 @@
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
+{{ form|crispy }}
     <div class="text-center">
         <button class="btn pink-btn" type="submit">{% trans 'Confirm' %}</button>
     </div>
