--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -10,7 +10,11 @@
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        <div class="text-center py-2">
+            <button class="btn pink-btn" type="submit" name="action">{% trans "Change Password" %}</button>
+        </div>
+        <div class="text-center py-2">
+            <a class="text-purple cursor-pointer" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+        </div>
     </form>
 {% endblock %}
