--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -14,10 +14,12 @@
             <form method="POST" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input type="submit" name="action" value="{% trans 'change password' %}"/>
+                <div class="text-center py-3">
+                    <input class="btn pink-btn" type="submit" name="action" value="{% trans 'change password' %}"/>
+                </div>
             </form>
         {% else %}
-            <p>{% trans 'Your password is now changed.' %}</p>
+            <p class="text-center">{% trans 'Your password is now changed.' %}</p>
         {% endif %}
     {% endif %}
 {% endblock %}
