--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -7,7 +7,7 @@
 {% block inner_content %}
 <h1 class="text-center pb-5">{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p class="text-center pb-3">{% blocktrans %}Already have an account? Then please <a class="cursor-pointer" href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
