--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -13,7 +13,15 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-lg-6">
+            <div class="col-10">
+                <div>
+                    <p class="text-center mx-auto d-inline">You are logged in as: <strong>{{ user.email }}</strong></p>
+                    <img class="img-small float-left" src="{% static 'sweeticons/049-lollipop.png' %}" alt="Smiley striped lollipop">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-6 mx-auto pb-5">
                 <h5 class="text-center pb-4">Default Delivery Information</h5>
                 <form method="POST" action="{% url 'profile'%}" id="profile-update-form">
                     {% csrf_token %}
@@ -23,9 +31,45 @@
                     </div>
                 </form>
             </div>
-            <div class="col-12 col-lg-6">
-                <h5 class="text-center pb-4">Your Order History</h5>
-                {{ orders }}
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-10 mx-auto">
+                <h5 class="text-center pb-4 pt-sm-5 pt-md-5 pt-lg-0">Your Order History</h5>
+                <div class="table-responsive">
+                    <table class="table table-sm table-borderless">
+                        <thead>
+                            <tr>
+                                <th>Order Number</th>
+                                <th>Date</th>
+                                <th>Items</th>
+                                <th>Order Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for order in orders %}
+                                <tr>
+                                    <td>
+                                        <a href="{% url 'order_history' order.order_number %}" 
+                                        title="{{ order.order_number }}">
+                                            {{ order.order_number|truncatechars:6 }}
+                                        </a>
+                                    </td>
+                                    <td>{{ order.date }}</td>
+                                    <td>
+                                        <ul class="list-unstyled">
+                                            <li class="small">
+                                                {% for item in order.lineitems.all %}
+                                                    {{ item.bag.name }} x {{ item.quantity }}
+                                                {% endfor %}
+                                            </li>
+                                        </ul>
+                                    </td>
+                                    <td>£{{ order.grand_total }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
