Removed old model and replaced lorem conent on index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,13 +44,14 @@
             <div class="col-5">
                 <img class="img-medium" src="{% static 'sweeticons/020-marshmallow.png' %}" alt="Smiley striped marshmallow">
             </div>
-            <div class="col-7">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat fugit suscipit delectus quasi, ex perspiciatis fugiat voluptas ipsum quidem quaerat fuga consequuntur, neque pariatur soluta dolor magni. Modi, quae.</p>
+            <div class="col-7 text-center">
+                <p>This is your one stop shop for delicious pick 'N' mix!</p>
+                <p>We have <strong>over 50 varieties</strong> of sweets to choose from so what are you waiting for?! </p>
             </div>
         </div>
         <div class="row py-5">
-            <div class="col-7">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia placeat fugit suscipit delectus quasi, ex perspiciatis fugiat voluptas ipsum quidem quaerat fuga consequuntur, neque pariatur soluta dolor magni. Modi, quae.</p>
+            <div class="col-7 text-center">
+                <p>Whether it's fizzy, jelly, chocolate or vegetarian we're sure to have something just right for your taste. Follow our simple process and make your selection - we'll take care of the rest.</p>
             </div>
             <div class="col-5">
                 <img class="img-medium float-right" src="{% static 'sweeticons/048-gooeycandy.png' %}" alt="Smiley gooey candy">
@@ -58,22 +59,23 @@
         </div>
         <div class="row py-5">
             <div class="col-sm-4 text-center py-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
-                    <img class="img-medium pt-3" src="{% static 'sweeticons/019-chocbar.png' %}" alt="Smiley chocolate bar">
+                <h3 class="py-3">CHOOSE</h3>
+                <img class="img-medium pt-3" src="{% static 'sweeticons/019-chocbar.png' %}" alt="Smiley chocolate bar">
             </div>
             <div class="col-sm-4 text-center py-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
-                    <img class="img-medium pt-3" src="{% static 'sweeticons/017-lollipop.png' %}" alt="Smiley pink lolliopo">
+                <h3 class="py-3">SCOOP</h3>
+                <img class="img-medium pt-3" src="{% static 'sweeticons/017-lollipop.png' %}" alt="Smiley pink lolliopo">
             </div>
             <div class="col-sm-4 text-center py-3">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, sequi provident ab iste ducimus illo mollitia.</p>
-                    <img class="img-medium pt-3" src="{% static 'sweeticons/024-macaron.png' %}" alt="Smiley purple macaron">
+                <h3 class="py-3">DELIVER</h3>
+                <img class="img-medium pt-3" src="{% static 'sweeticons/024-macaron.png' %}" alt="Smiley purple macaron">
             </div>
         </div>
         <div class="row">
             <div class="col-12 text-center pt-5">
-                <p class="pt-3">Laudantium vitae in! Sit consectetur at vel dolorem sed, cupiditate amet architecto vitae praesentium! Dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab earum quae ut, suscipit ea voluptas labore vero necessitatibus qui eos fugiat consequuntur animi.</p>
-                <p class="pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="pt-3">Can't decide?</p>
+                <p class="pb-3">We have a pre-selected range of bags for those of you who just can't make their minds up.</p> 
+                <p class="pb-3">Just click shop now and choose from either, Jelly, Fizzy, Choccie, Vegetarian or if you're feeling lucky... Random!</p>
                 <a class="btn btn-lg pink-btn" href="{% url 'bags' %}">Shop now</a>
             </div>
         </div>
