Updated footer section placeholder links

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,18 +1,17 @@
 <div class="container-fluid footer-padding bg-color-purplenavy">
     <div class="row">
         <div class="col-4 text-center footer-link-positioning">
-            <h3 class="footer-headers mb-3">Footer Links</h3>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
+            <h3 class="footer-headers mb-3">Check it out</h3>
+            <a href="#" class="my-1 py-1 footer-links-style">About</a>
+            <a href="#" class="my-1 py-1 footer-links-style">Rewards</a>
+            <a href="#" class="my-1 py-1 footer-links-style">Track Order</a>
+            <a href="#" class="my-1 py-1 footer-links-style">Delivery Info</a>
         </div>
         <div class="col-4 text-center footer-link-positioning">
-            <h3 class="footer-headers mb-3">Footer Links</h3>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
-            <a href="#" class="m-auto py-1 footer-links-style">some links</a>
+            <h3 class="footer-headers mb-3">More stuff</h3>
+            <a href="#" class="my-1 py-1 footer-links-style">Ingredients</a>
+            <a href="#" class="my-1 py-1 footer-links-style">FAQs</a>
+            <a href="#" class="my-1 py-1 footer-links-style">Partnerships</a>
         </div>
         <div class="col-4 text-center">
             <h3 class="footer-headers mb-3">Social</h3>
