--- a/sweets/templates/sweets/scoops.html
+++ b/sweets/templates/sweets/scoops.html
@@ -23,7 +23,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -34,7 +34,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                            <img src="" class="sweet-select-img m-auto rounded" alt="">
+                            <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -45,7 +45,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,7 +56,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -67,7 +67,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -78,7 +78,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -89,7 +89,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -100,7 +100,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -111,7 +111,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group">
@@ -122,7 +122,7 @@
                                         <option value='{"name":"{{ scoop.name }}", "id":"{{ scoop.id }}", "price":"{{ scoop.price }}", "image":"{{ scoop.image }}"}'>{{ scoop.name }}</option>
                                     {% endfor %}
                                 </select>
-                                <img src="" class="sweet-select-img m-auto rounded" alt="">
+                                <img src="" class="sweet-select-img m-auto rounded d-none" alt="">
                             </div>
                         </div>
                         <div class="form-group py-3">
@@ -144,7 +144,7 @@
                         <button type="submit" class="btn pink-btn mx-sm-2 my-1 font-weight-bold">Checkout</button>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         <div class="d-inline mx-sm-2 pt-1"><i class="fab fa-cc-stripe stripe-icon"></i></div>
-                        <small class="text-center d-block pt-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam amet fugiat nam, harum soluta eveniet voluptatibus omnis quas mollitia eaque blanditiis quasi! Nostrum repellat quia iusto tempora neque amet ex.</small>
+                        <small class="text-center d-block pt-5">Choose 10 scoops of your favourite pick 'n' mix from the drop down menus, increase quantity if you're feeling particularly peckish, add to cart and then head to checkout!</small>
                 </form>
             </div>
         </div>
