Some styling and tweaks to checkout and checkout success

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -92,10 +92,10 @@
                     </fieldset>
 
                     <div class="mt-5 mb-2">                    
-						<a href="{% url 'view_cart' %}" class="btn purple-btn font-weight-bold mx-2">
+						<a href="{% url 'view_cart' %}" class="btn purple-btn font-weight-bold my-1 mx-2">
                             Adjust Bag
 						</a>
-						<button id="submit-button" class="btn pink-btn font-weight-bold mx-2">
+						<button id="submit-button" class="btn pink-btn font-weight-bold my-1 mx-2">
 							Complete Order
 						</button>
 						<p class="small text-danger mt-3">
