--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -34,7 +34,7 @@
                             <p class="mb-1 font-weight-bold">Order Number</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="mb-1">{{ order.order_number }}</p>
+                            <p class="mb-1 wrap-text">{{ order.order_number }}</p>
                         </div>
                     </div>
 
@@ -193,7 +193,7 @@
                         <a href="{% url 'profile' %}" class="btn pink-btn mx-auto">Go to profile</a>
                     </div>
                 {% else %}
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore esse aut quidem provident dicta, sed corporis aliquid minima itaque ab sapiente nostrum tempora commodi, consectetur aspernatur amet eligendi maiores facilis.</p>
+                    <p class="text-center">Thanks for shopping with us! Click below to take you back to the home page.</p>
                     <div class="text-center">
                         <a href="{% url 'home' %}" class="btn pink-btn mx-auto">Home</a>
                     </div>
