--- a/sweets/templates/sweets/bags.html
+++ b/sweets/templates/sweets/bags.html
@@ -42,8 +42,8 @@
                             </div>
                         </div>
                     </div>
+                    <a href="{% url 'home' %}" class="btn pink-btn mx-sm-2 my-1 font-weight-bold">Return</a>
                     <button type="submit" class="btn purple-btn mr-sm-2 my-1 font-weight-bold">Add to cart</button>
-                    <button type="submit" class="btn pink-btn mx-sm-2 my-1 font-weight-bold">Checkout</button>
                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     <div class="d-inline mx-sm-2 pt-1"><i class="fab fa-cc-stripe stripe-icon"></i></div>
                     <small class="text-center d-block pt-5">Choose from the pre-selected range of pick 'n' mix.</small>
