Added code credits

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -104,6 +104,7 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'sweets/includes/quantity_input_script.html' %}
+<!-- Following code adapted from boutique ado tutorial -->
 <script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
