--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,3 +1,4 @@
+<!-- Following code adapted from boutique ado tutorial and customized further -->
 {% extends "base.html" %}
 {% load static %}
 {% load bag_tools %}
