--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -34,6 +34,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-sm-10 mx-auto">
+                <!-- Orders section adapted from Boutique Ado tutorial -->
                 <h5 class="text-center pb-4 pt-sm-5 pt-md-5 pt-lg-0">Your Order History</h5>
                 <div class="table-responsive">
                     <table class="table table-sm table-borderless">
