--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -188,7 +188,7 @@
         <div class="row">
             <div class="col-12">
                 {% if from_profile %}
-                    <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore esse aut quidem provident dicta, sed corporis aliquid minima itaque ab sapiente nostrum tempora commodi, consectetur aspernatur amet eligendi maiores facilis.</p>
+                    <p class="text-center">Thanks for shopping with us! Click below to return to your profile.</p>
                     <div class="text-center">
                         <a href="{% url 'profile' %}" class="btn pink-btn mx-auto">Go to profile</a>
                     </div>
